Fixed CSS errors and added wrap for header

--- a/includes/style.css
+++ b/includes/style.css
@@ -3,6 +3,9 @@ body {
 	background-color:#ebebeb;
 }
 #main_head {
+	width:100%;
+	height:200px;
+
 	background: #f8f8f8; /* Old browsers */
 	background: -moz-linear-gradient(top, #f8f8f8 52%, #ebebeb 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(52%,#f8f8f8), color-stop(100%,#ebebeb)); /* Chrome,Safari4+ */
@@ -16,10 +19,17 @@ body {
 	-webkit-box-shadow: 5px 5px 5px black;
 	box-shadow: 5px 5px 5px black;
 }
+#main_head_wrap {
+	height:1024px;
+	height:200px;
+	padding:5px;
+	margin-right:auto;
+	margin-left:auto;
+}
 #logo {
 	border:none;
 	text-decoration:none;
-	background-image:url('images/logo.png');
+	background-image:url('../images/logo.png');
 	width:324;
 	height:98;
 }
